--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <html>
 
 <head>
+<style>
+h1 {color:rgb(255,255,255);}
+
+
+  
+</style>
+
 
   
 </head>
 
 <body>
-
+  
 <h1>All About England</h1>
+
+
+
+
+
+
+
   
 </body>
   
