--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);
 
 <body>
   
-<h1>All About England</h1>
+<h1>ALL ABOUT ENGLAND</h1>
 <h2>Why you should visit England</h2>
-<h3>ENGLAND IS AMAZING</h3>
+
 
 
 
