--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ h1 {color:rgb(255,255,255);}
  h2 {color:rgb(255,255,255); }
 body {background: rgb(7,5,45);
 background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);}
-  
+  p {color:rgb(255,255,255);}
+ h3 {color:rgb(255,255,255);}
 </style>
 
 
@@ -19,8 +20,17 @@ background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);
 <h2>Why you should visit England</h2>
  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.studying-in-uk.org%2F15-interesting-facts-about-london%2F&psig=AOvVaw10MxN0-PljMsvhN9ezNaFJ&ust=1701707954469000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCMDFp6Xa84IDFQAAAAAdAAAAABAP" width="400">
 
+<p>
+England is an amazing place and I like to go to London You can have so much fun while shopping in different places like westfield or brent cross,, you can also visit The London Eye, London Bridge or Big Ben. Sometimes you can go on roadtrips to the countryside or the beach too.
+ 
+</p>
 
-
+ <h3>
+  Transport around England.
+ </h3>
+<p>
+ To travel around England you can use the underground, a cab, uber a car or even and airoplane to get around giant parts of England.
+</p>
 
 
 
