--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ h1 {color:rgb(255,255,255);}
 body {background: rgb(7,5,45);
 background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);}
   p {color:rgb(255,255,255);}
+ u {color:rgb(255,255,255);}
  
 </style>
 
