--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ England is an amazing place and I like to go to London You can have so much fun 
   Transport around England.
  </h2></u>
 <p>
- To travel around England you can use the underground, a cab, uber a car or even and airoplane to get around giant parts of England.
+ To travel around England you can use the underground, a cab, an uber a car or even an airoplane to get around some parts of England.
 </p>
 
 
