--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);
   
 <h1>ALL ABOUT ENGLAND</h1>
 <h2>Why you should travel to England.</h2><h2>
- <img src="https://static.wikia.nocookie.net/olympians/images/f/f6/London_City.jpg/revision/latest?cb=20150627225121.jpg>
+ <img src="https://static.wikia.nocookie.net/olympians/images/f/f6/London_City.jpg/revision/latest?cb=20150627225121.jpg">
 <p>
 England is an amazing place and I like to go to London You can have so much fun while shopping in different places like westfield or brent cross, you can also visit The London Eye, London Bridge or Big Ben. Sometimes you can go on roadtrips to the countryside or the beach too.
  
