--- a/index.html
+++ b/index.html
@@ -20,25 +20,20 @@ background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);
 <h1>ALL ABOUT ENGLAND</h1>
 <h2>Why you should travel to England.</h2><h2>
  <img src="https://static.wikia.nocookie.net/olympians/images/f/f6/London_City.jpg/revision/latest?cb=20150627225121.jpg" width="500">
-<p>
-England is an amazing place and I like to go to London You can have so much fun while shopping in different places like westfield or brent cross, you can also visit The London Eye, London Bridge or Big Ben. Sometimes you can go on roadtrips to the countryside or the beach too.
- 
-</p>
 
 <u> <h2>
-  Transport around England.
+  Things to do in England
  </h2></u>
 <p>
- To travel around England you can use the underground, a cab, an uber a car or even an airoplane to get around some parts of England.
-</p>
+ To travel around England you can use a cab, an uber a car, a bus or the underground which some people call the tube.Some fun things to do in England are to shop maybe in westfield or brent cross.
 
-<img src= "https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.wired.co.uk%2Farticle%2Flondon-underground-tfl-green-energy&psig=AOvVaw3x-dYP5GiLpvrCHrTbBnKC&ust=1701767348507000.jpg"  width="500">
+
+
+</p>
 
 
 
  
-
-
   
 </body>
   
