--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ h1 {color:rgb(255,255,255);}
  h2 {color:rgb(255,255,255); }
 body {background: rgb(7,5,45);
 background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);}
-  p {color:rgb(255,255,255);}
+  h3 {color:rgb(255,255,255);}
  u {color:rgb(255,255,255);}
  
 </style>
@@ -24,12 +24,12 @@ background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);
 <u> <h2>
   Things to do in England
  </h2></u>
-<p>
- To travel around England you can use a cab, an uber a car, a bus or the underground which some people call the tube.Some fun things to do in England are to shop maybe in westfield or brent cross.
+<h3>
+ To travel around England you can use a cab, an uber a car, a bus or the underground which some people call the tube.Some fun things to do in England are to shop maybe in westfield or brent cross 
 
 
 
-</p>
+</h3>
 
 
 
