--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@ background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);
 <h2>Why you should travel to England.</h2><h2>
  <img src="https://static.wikia.nocookie.net/olympians/images/f/f6/London_City.jpg/revision/latest?cb=20150627225121.jpg" width="500">
 
-<u> <h2>
+ <h2>
   Things to do in England
- </h2></u>
+ </h2>
 <h3>
- To travel around England you can use a cab, an uber a car, a bus or the underground which some people call the tube.Some fun things to do in England are to shop maybe in westfield or brent cross 
+ To travel around England you can use a cab, an uber a car, a bus or the underground which some people call the tube. Some fun things to do in England are to shop maybe in westfield or brent cross.
+ You can also go to see some famous landmarks like Big Ben, The London Bridge and The London Eye.
 
 
 
