--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);
  </h2>
 <h3>
  To travel around England you can use a cab, an uber a car, a bus or the underground which some people call the tube. Some fun things to do in England are to shop maybe in westfield or brent cross.
- You can also go to see some famous landmarks like Big Ben, The London Bridge and The London Eye.
+ You can also go to see some famous landmarks like Big Ben, The London Bridge and The London Eye and if its good weather you can go to the park or go on a roadtrip to the countryside or a beach.
 
 
 
