--- a/index.html
+++ b/index.html
@@ -2,12 +2,28 @@
 
 <head>
 <style>
-h1 {color:rgb(255,255,255);}
- h2 {color:rgb(255,255,255); }
-body {background: rgb(7,5,45);
-background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);}
-  h3 {color:rgb(255,255,255);}
- u {color:rgb(255,255,255);}
+ 
+h1 {
+ color:rgb(255,255,255);
+ background-color: rgb(52,32,86);
+}
+ 
+ h2 {
+  color:rgb(255,255,255); 
+   background-color: rgb(84,84,197);
+ }
+ 
+body {
+ background: rgb(7,5,45);
+background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);
+ text-align: center;
+}
+ 
+  h3{
+   color:rgb(255,255,255);
+  
+  }
+
  
 </style>
 
@@ -18,8 +34,8 @@ background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);
 <body>
   
 <h1>ALL ABOUT ENGLAND, LONDON</h1>
-<h2>Why you should travel to England, London.</h2><h2>
- <img src="https://static.wikia.nocookie.net/olympians/images/f/f6/London_City.jpg/revision/latest?cb=20150627225121.jpg" width="500">
+<h2>Why you should travel to England, London.</h2>
+ <img src="https://assets.editorial.aetnd.com/uploads/2019/03/topic-london-gettyimages-760251843-feature.jpg" width="500">
 
  <h2>
   Things to do in England and London
@@ -27,7 +43,7 @@ background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);
 <h3>
  To travel around England you can use a cab, an uber a car, a bus or the underground which some people call the tube. Some fun things to do in England are to shop maybe in westfield or brent cross.
  You can also go to see some famous landmarks like Big Ben, The London Bridge and The London Eye and if its good weather you can go to the park or go on a roadtrip to the countryside or a beach. There are many museums in London to see.
-
+In England there are lots of themeparks 
 
 
 </h3>
