--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+l<html>
 
 <head>
 <style>
@@ -47,6 +47,8 @@ In England there are lots of themeparks which are also really fun.
 
 
 </h3>
+
+ <button class="button" type="submit">Post comment (button)</button>
 
 
 
