--- a/index.html
+++ b/index.html
@@ -48,8 +48,16 @@ In England there are lots of themeparks which are also really fun.
 
 </h3>
 
- <button class="button" type="submit">Post comment (button)</button>
-
+ <button class="button" type="submit">Click here to look at a list of places to go.</button>
+<Post>
+     <Link to='/https://docs.google.com/document/d/1JHy9qHIHldgVoZxaas6_Bz0B3jiwO_-1phwHtnvul_M/edit?usp=sharing'>
+         <contents>
+             <usename />
+              <date />
+              <div onClick={doSomething}>Edit</div>
+         </contents>
+     </Link>
+</Post>
 
 
  
