--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);
  
 </style>
 
-
+.home
   
 </head>
 
@@ -48,7 +48,7 @@ In England there are lots of themeparks which are also really fun.
 
 </h3>
 
- <button class="button" type="submit">Click here to look at a list of places to go.</button>
+ <a href="#" class="home">Click here to see a list of where to go in England</a>
 <Post>
      <Link to='/https://docs.google.com/document/d/1JHy9qHIHldgVoZxaas6_Bz0B3jiwO_-1phwHtnvul_M/edit?usp=sharing'>
          <contents>
