--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@ background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);
   
   }
 
+a {
+ color:rgb(255,255,255);
+}
+
  
 </style>
 
