--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ In England there are lots of themeparks which are also really fun.
          <contents>
              <usename />
               <date />
-              <div onClick={doSomething}>Edit</div>
+              <div onClick={openlink}>Click here to see a list of where to go in England </div>
          </contents>
      </Link>
 </Post>
