--- a/index.html
+++ b/index.html
@@ -52,16 +52,9 @@ In England there are lots of themeparks which are also really fun.
 
 </h3>
 
- <a href="#" class="home">Click here to see a list of where to go in England</a>
-<Post>
-     <Link to='/https://docs.google.com/document/d/1JHy9qHIHldgVoZxaas6_Bz0B3jiwO_-1phwHtnvul_M/edit?usp=sharing'>
-         <contents>
-             <usename />
-              <date />
-              <div onClick={openlink}>Click here to see a list of where to go in England </div>
-         </contents>
-     </Link>
-</Post>
+ <a href="https://docs.google.com/document/d/1JHy9qHIHldgVoZxaas6_Bz0B3jiwO_-1phwHtnvul_M/edit?usp=sharing">
+  <button>Click me</button>
+</a>
 
 
  
