--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ In England there are lots of themeparks which are also really fun.
 </h3>
 
  <a href="https://docs.google.com/document/d/1JHy9qHIHldgVoZxaas6_Bz0B3jiwO_-1phwHtnvul_M/edit?usp=sharing">
-  <button>Click me</button>
+  <button>List of places in England</button>
 </a>
 
 
