--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ In England there are lots of themeparks which are also really fun.
 </h3>
 <p>Click the button underneath to see a list of places to go to in England</p>
  <a href="https://docs.google.com/document/d/1JHy9qHIHldgVoZxaas6_Bz0B3jiwO_-1phwHtnvul_M/edit?usp=sharing">
-  <button>Click Me</button>
+  <strong><button>Click Me</button></strong>
 </a>
 
 
