--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@ body {
 background: radial-gradient(circle, rgba(7,5,45,1) 2%, rgba(34,119,182,1) 100%);
 
 }
+
+p {
+color:rgb(255,255,255);
+ 
+}
  
   h3{
    color:rgb(255,255,255);
