--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@ In England there are lots of themeparks which are also really fun.
 <p>Click the button underneath to see a list of places to go to in England</p>
  <a href="https://docs.google.com/document/d/1JHy9qHIHldgVoZxaas6_Bz0B3jiwO_-1phwHtnvul_M/edit?usp=sharing">
   <button><strong>Click Me</strong></button>
+
 </a>
+ <img src="https://media.tenor.com/CBy_vjW_AwQAAAAC/london-two-decker-bus.gif">
 
 
  
