--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@ In England there are lots of themeparks which are also really fun.
 
 </a>
  <img src="https://media.tenor.com/CBy_vjW_AwQAAAAC/london-two-decker-bus.gif">
+ .parentDiv {  
+display: flex; 
+justify-content: center; 
+align-items: center;} 
 
 
  
