--- a/index.html
+++ b/index.html
@@ -73,12 +73,7 @@ In England there are lots of themeparks which are also really fun.
  <a href="https://docs.google.com/document/d/1JHy9qHIHldgVoZxaas6_Bz0B3jiwO_-1phwHtnvul_M/edit?usp=sharing">
   <button><strong>Click Me</strong></button>
 
-</a>
- <img src="https://media.tenor.com/CBy_vjW_AwQAAAAC/london-two-decker-bus.gif">
- .parentDiv {  
-display: flex; 
-justify-content: center; 
-align-items: center;} 
+<img src="https://media.baamboozle.com/uploads/images/290502/1619524559_44373_gif-url.gif">
 
 
  
