--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@ button:hover {
 <body>
   
 <h1>ALL ABOUT ENGLAND, LONDON</h1>
-<h2>Why you should travel to England, London.</h2>
+<h2>Why you should travel to England</h2>
  <img src="https://images.unsplash.com/photo-1520986606214-8b456906c813?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGxvbmRvbnxlbnwwfHwwfHx8MA%3D%3D" width="500">
 
  <h2>
-  Things to do in England and London
+  Things to do in England
  </h2>
 <h3>
  To travel around England you can use a cab, an uber a car, a bus or the underground which some people call the tube. Some fun things to do in England are to shop maybe in westfield or brent cross.
- You can also go to see some famous landmarks like Big Ben, The London Bridge and The London Eye and if its good weather you can go to the park or go on a roadtrip to the countryside or a beach. There are many museums in London to see.
+ You can also go to see some famous landmarks in London like Big Ben, The London Bridge and The London Eye and if its good weather you can go to the park or go on a roadtrip to the countryside or a beach. There are many museums in London to see.
 In England there are lots of themeparks which are also really fun.
 
 
@@ -74,6 +74,20 @@ In England there are lots of themeparks which are also really fun.
   <button><strong>Click Me</strong></button>
 
 <img src="https://media.baamboozle.com/uploads/images/290502/1619524559_44373_gif-url.gif">
+
+
+   <a href="https://docs.google.com/document/d/1JHy9qHIHldgVoZxaas6_Bz0B3jiwO_-1phwHtnvul_M/edit?usp=sharing">
+  <button><strong>LONDON</strong></button>
+
+    <div class="navbar">
+  <a href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+</div>
+
+<div class="main">
+  <p>Some text some text some text some text..</p>
+</div>
 
  
 
