--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@ button:hover {
 </head>
 
 <body>
-  
+  <nav>
+ <a href="#"><div>Home</div></a>
+ <a href="#"><div>About</div></a>
+ <a href="#"><div>Contact</div></a>
+ <a href="#"><div>Sitemap</div></a>
+</nav>
+ 
 <h1>ALL ABOUT ENGLAND, LONDON</h1>
 <h2>Why you should travel to England</h2>
  <img src="https://images.unsplash.com/photo-1520986606214-8b456906c813?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGxvbmRvbnxlbnwwfHwwfHx8MA%3D%3D" width="500">
