--- a/index.html
+++ b/index.html
@@ -42,6 +42,31 @@ width: 95px;
 button:hover {
   background-color:#000000; 
   color: white;
+ 
+}
+
+ .topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
 }
 
 
@@ -54,7 +79,13 @@ button:hover {
 </head>
 
 <body>
- 
+ <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+
  
 <h1>ALL ABOUT ENGLAND, LONDON</h1>
 <h2>Why you should travel to England</h2>
