--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ width: 95px;
  }
 
 button:hover {
-  background-color:#000000; 
+  background-color:#ffffff; 
   color: white;
  
 }
@@ -81,8 +81,8 @@ button:hover {
 <body>
  <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+  <a href="#London">London</a>
+  <a href="#Liverpool">Liverpool</a>
   <a href="#about">About</a>
 </div>
 
