--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ button:hover {
  <div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="#London">London</a>
-  <a href="#Liverpool">Liverpool</a>
+  <a href="#famous people">famous people</a>
   <a href="#about">About</a>
 </div>
 
