--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-l<html>
+<html>
 
 <head>
 <style>
@@ -47,7 +47,7 @@ button:hover {
 
  .topnav {
   overflow: hidden;
-  background-color: #fffffff;
+  background-color: #ffffff;
 }
 
 .topnav a {
@@ -65,7 +65,7 @@ button:hover {
 }
 
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: #000000;
   color: white;
 }
 
